--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
   },
   "dependencies": {
     "next": "14.2.5",
+    "rating": "^0.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-rating": "^2.0.5",
+    "react-star-rating": "^1.4.2",
+    "react-star-ratings": "^2.3.0",
     "stars-rating": "^1.1.0",
+    "stars-rating-react": "^1.0.3",
     "stars-ratings": "^4.0.0"
   },
   "devDependencies": {
